[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["viacheslavzablotskiy <zlava.mag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.2"}
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
pydantic = "^2.4.2"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
